--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		 <h1>Hi, there!<i class="em em-man-raising-hand" aria-role="presentation" aria-label=""></i></h1><h2>i'm Luciano Savoretti</h2><h3>Frontend Developer.</h3>
 		 <p><img src="imgs/profile.jpg"></p>
 		 <p>Hello im from of Argentina, i have 26 years old and i've looking for 
-		a job of complet time in frontend development, everydays i'm trying to improves 
+		a job of complet time in frontend development, everyday i'm trying to improves 
 		my knowledge, so... this is my briefcase.</p>
 		 </main>
 	 <div class="skills"> <b>My	Skills:</b>
