--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		     	<ul>
                  <li><a href="index.html">Home</a></li> 
 		         <li><a href="#">About</a></li> 
-		 		 <li><a href="#">My Skills</a></li> 
+		 		 <li><a href="#skills">My Skills</a></li> 
 		  		 <li><a href="#">Work</a></li> 
 		 		 <li><a href="form.html">Contact</a></li> 
 				</ul>
@@ -32,7 +32,7 @@
 		a job of complet time in frontend development, everyday i'm trying to improves 
 		my knowledge, so... this is my briefcase.</p>
 		 </main>
-	 <div class="skills"> <b>My	Skills:</b>
+	 <div id="skills"> <b>My	Skills:</b>
 		 <div class="skills--type">JavaScript</div>
 		 <div class="skills--type">HTML5</div>
 		 <div class="skills--type">CSS3</div>
