--- a/form.html
+++ b/form.html
@@ -18,7 +18,7 @@
 			<ul>
 			<li><a href="index.html">Home</a></li> 
 			<li><a href="#">About</a></li> 
-			 <li><a href="#">My Skills</a></li> 
+			 <li><a href="index.html#skills">My Skills</a></li> 
 			  <li><a href="#">Work</a></li> 
 			 <li><a href="#">Contact</a></li> 
 		   </ul>
